project(znet)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -g")
add_definitions("-D_GNU_SOURCE")
add_definitions("-DNOUSE_JEMALLOC")
include_directories(${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/libuv/include ${CMAKE_SOURCE_DIR}/libuv/src ${CMAKE_SOURCE_DIR}/lua/src ${CMAKE_SOURCE_DIR}/duktape)
add_subdirectory(lua)
add_subdirectory(duktape)
add_subdirectory(libuv)
aux_source_directory(./src src)
add_executable(znet ${src} )
set_target_properties(znet PROPERTIES output_name "znet")
