project(znet)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -g")
add_definitions("-D_GNU_SOURCE")
add_definitions("-DNOUSE_JEMALLOC")
include_directories(${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/libuv/include ${CMAKE_SOURCE_DIR}/libuv/src ${CMAKE_SOURCE_DIR}/lua/src ${CMAKE_SOURCE_DIR}/duktape)
aux_source_directory(./ src)
aux_source_directory(./lualib lualib)
aux_source_directory(./lualib/sproto lualib_sproto)
aux_source_directory(./lualib/lpeg lualib_lpeg)
aux_source_directory(./server server)
add_executable(znet ${src} ${lualib} ${server} ${lualib_sproto} ${lualib_lpeg})
target_link_libraries(znet uv lua duktape pthread m dl)
set_target_properties(znet PROPERTIES output_name "znet")
